oc/deployment/01-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-ping-pong
spec:
  selector:
    matchLabels:
      app: go-ping-pong
  replicas: 1
  template:
    metadata:
      labels:
        app: go-ping-pong
    spec:
      containers:
        - name: go-ping-pong
          image: quay.io/jewzaam/go-ping-pong:master
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 2
