oc/deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-ping-pong
spec:
  selector:
    matchLabels:
      app: go-ping-pong
  replicas: 1
  template:
    metadata:
      labels:
        app: go-ping-pong
    spec:
      containers:
        - name: go-ping-pong
          image: quay.io/jewzaam/go-ping-pong:latest
          ports:
            - containerPort: 8080
