oc/deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-ping-pong
spec:
  selector:
    app: go-ping-pong
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
